I4009: image alt overflow issue

--- a/src/amo/components/SearchSuggestion/styles.scss
+++ b/src/amo/components/SearchSuggestion/styles.scss
@@ -19,6 +19,7 @@
   @include margin-end(12px);
 
   height: 16px;
+  overflow: hidden;
   width: 16px;
 }
 
